Prevent name jumping when exanding creature

--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,7 @@ button {
   font-size: 28px;
   text-transform: capitalize;
   color: #822000;
+  margin-top: 4px;
 }
 
 .expanded-creature--stat {
